--- a/teknikfag/templates/index.html
+++ b/teknikfag/templates/index.html
@@ -95,7 +95,12 @@
 </style>
 
 <body>
-  <div class="row ceiling">
+   
+  <div class="celling row">
+    <h1 style="color: azure; text-align: center;">Drivhus</h1>
+    <h5 style="color: azure; text-align:center;">Dette er et eksamens projekt i teknikfag på Midtbyens Gymnasium</h5>
+  </div>
+  <div class="row">
     <div class="six columns">
       <div class="row">
         <div class="bento twelve columns a">
